test/src/e2e_vm_tests/test_programs/should_fail/language/reexport/simple_item_import/src/items_3.sw
library;

pub enum Items3_Variants {
    S: u64,
    T: u64,
}
